--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,17 +17,21 @@ jobs:
   one:
     runs-on: ubuntu-latest
     outputs:
-      myvar: ${{ steps.step1.outputs.myvar }}    
+      v1var: ${{ steps.step1.outputs.v1 }}
+      v2var: ${{ steps.step1.outputs.v2 }}    
     strategy:
       matrix:
         foo: [v1, v2]
     steps:
     - id: step1
-      run: echo "::set-output name=myvar::${{ matrix.foo }}"
+    - run: echo "::set-output name=myvar::${{ matrix.foo }}"
+    - run: echo "::set-output name=${{ matrix.foo }}::${{ matrix.foo }}"
   two:
     runs-on: ubuntu-latest
     needs: one
     steps:
     - run: echo '${{ needs.one.outputs.myvar }}'
     - run: echo '${{ toJson(needs.one.outputs.myvar) }}'
+    - run: echo '${{ needs.one.outputs.v1var }}'
+    - run: echo '${{ needs.one.outputs.v2var }}'
     - run: echo '${{ toJson(needs.one.outputs) }}'
