--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
     - id: step1
       run: echo "::set-output name=${{ matrix.foo }}::${{ matrix.foo }}"
+      env:
+        REPOSECRET: ${{ secrets.REPOSECRET }}
   two:
     runs-on: ubuntu-latest
     needs: one
@@ -32,3 +34,5 @@ jobs:
     - run: echo '${{ needs.one.outputs.v1var }}'
     - run: echo '${{ needs.one.outputs.v2var }}'
     - run: echo '${{ toJson(needs.one.outputs) }}'
+    
+    
