--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,13 +2,12 @@
 
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    tags:
+      - "*"
+    paths:
+      - README.md
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -18,21 +17,19 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       v1var: ${{ steps.step1.outputs.v1 }}
-      v2var: ${{ steps.step1.outputs.v2 }}    
+      v2var: ${{ steps.step1.outputs.v2 }}
     strategy:
       matrix:
         foo: [v1, v2]
     steps:
-    - id: step1
-      run: echo "::set-output name=${{ matrix.foo }}::${{ matrix.foo }}"
-      env:
-        REPOSECRET: ${{ secrets.REPOSECRET }}
+      - id: step1
+        run: echo "::set-output name=${{ matrix.foo }}::${{ matrix.foo }}"
+        env:
+          REPOSECRET: ${{ secrets.REPOSECRET }}
   two:
     runs-on: ubuntu-latest
     needs: one
     steps:
-    - run: echo '${{ needs.one.outputs.v1var }}'
-    - run: echo '${{ needs.one.outputs.v2var }}'
-    - run: echo '${{ toJson(needs.one.outputs) }}'
-    
-    
+      - run: echo '${{ needs.one.outputs.v1var }}'
+      - run: echo '${{ needs.one.outputs.v2var }}'
+      - run: echo '${{ toJson(needs.one.outputs) }}'
