--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,8 +11,8 @@ on:
     branches:
       - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+permissions:
+  packages: write
 
 jobs:
   one:
@@ -28,6 +28,7 @@ jobs:
         run: echo "::set-output name=${{ matrix.foo }}::${{ matrix.foo }}"
         env:
           REPOSECRET: ${{ secrets.REPOSECRET }}
+          FOO: ${{ secrets.GITHUB_TOKEN }}
   two:
     runs-on: ubuntu-latest
     needs: one
